# trading_bot

./: .coveragerc  .env.example  .gitignore  README.md  git_output.txt  main.py  pyproject.toml  requirements.txt  setup.cfg
allocator/: profiles.py  trader.py  utils.py
backtest/: backtest.py
config/: etfs.json
core/: trader.py  utils.py
docs/: ACTION_CHECKLIST.md  CHANGES_SUMMARY.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  TESTING.md
scripts/: setup.sh  validate_env.py
tests/: test_allocation.py  test_allocator.py  test_backtesting.py  test_edge_cases.py  test_profiles.py  test_trader.py  test_utils.py
